Changes to to 0.5.34
ALL TODO
	* test rowspan lots and lots on examples.
	* careful colspan tests.
	
	* complex mode colspan and rowspan, and various support functions.

	* title not being done in the correct charset
	* we need character formatting for the <li> itself, we can do this I 
	suppose, but i'll hold off on that for a while.

	* tables.
	* fontface and size for char runs..

	* what about a collision between underline and revision added ? and also the 
	strike and revision deleted ?, what if a mad user created his own collisions. 
	In the future there will be problems with links being broken by references, 
	this is a similar problem.
	
	* what was i at with sprmCFtcDefault ????, fBold ??, what the...

	* add the rest of the appropiate char props to decode_simple, repeat for
	decode_complex
	* search for more SEP sprm diffs between 6 and 8
	* add in the list extraction code ?


	* install cygwin thingy at home and test configure mechanism for searching and
	installing strcasecmp/rint.

	* table properties & lists to be done

	* i figured out what the story is with ole embedded files, ill have to modify
	my ole code so as to be able in the future to parse embedded docs and splice
	them together, which could be a wee bit of a challenge.

	* modify configure script so its possible to link against a different expat
	lib, or to disable it or something.
	* add errors via numbered errors to wvInitParser.

	* harden wvConfig against bad pointers, and incomplete sections e.g justification
	* make wvConvert read config from commandline, and 
	* additional code checks for conversion of codepage whatever to iso for
	ancillary strings that might be stored in that format.
	* modify complex code to stop at end of main text

	* i have Plcfbte's marked as generic empty structures in the old code, which 
	is technically incorrect but works the way i've set up the code to handle it.
	* wvToggle is wrong im sure.